--- a/Comp2614Assignment4/FormMain.resx
+++ b/Comp2614Assignment4/FormMain.resx
@@ -123,4 +123,7 @@
   <metadata name="timerDateDisplay.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>153, 17</value>
   </metadata>
+  <metadata name="timerProcessTransactions.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>298, 17</value>
+  </metadata>
 </root>
